k8s/geth/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: geth
  namespace: default
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/port: "8545"
spec:
  clusterIP: None
  selector:
    app: geth
  ports:
  - name: http-rpc
    port: 8545
    targetPort: 8545
    protocol: TCP
  - name: ws-rpc
    port: 8546
    targetPort: 8546
    protocol: TCP
  - name: p2p-tcp
    port: 30303
    targetPort: 30303
    protocol: TCP
  - name: p2p-udp
    port: 30303
    targetPort: 30303
    protocol: UDP
  - name: engine-api
    port: 8551
    targetPort: 8551
    protocol: TCP
