k8s/geth/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-nginx-to-geth
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: geth
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app.kubernetes.io/name: ingress-nginx
      namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: ingress-nginx
    ports:
    - protocol: TCP
      port: 8545
    - protocol: TCP
      port: 8546
  policyTypes:
  - Ingress
